--- a/src/_css.html
+++ b/src/_css.html
@@ -50,6 +50,10 @@
     color: gray;
   }
 
+  .modal-folding-button {
+    margin: 0 20px;
+  }
+
   .myvistl-item-content-innerbox a,
   .myvistl-item-content-innerbox p {
     color: black;
