vis-timeline のバージョンを固定

--- a/src/_assets.html
+++ b/src/_assets.html
@@ -26,7 +26,7 @@
 
 <!-- vis-timeline -->
 <link
-  href="https://unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css"
+  href="https://unpkg.com/vis-timeline@7.4.2/styles/vis-timeline-graph2d.min.css"
   rel="stylesheet"
   type="text/css"
 />
