--- a/src/_js_assets.html
+++ b/src/_js_assets.html
@@ -49,5 +49,5 @@
 <!-- vis-timeline -->
 <script
   type="text/javascript"
-  src="//unpkg.com/vis-timeline@latest/standalone/umd/vis-timeline-graph2d.min.js"
+  src="//unpkg.com/vis-timeline@7.4.2/standalone/umd/vis-timeline-graph2d.min.js"
 ></script>
